// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot of Simple bar 1`] = `
<EchartsReact
  className=""
  echarts={Object {}}
  lazyUpdate={false}
  loadingOption={null}
  notMerge={false}
  onChartReady={[Function]}
  onEvents={Object {}}
  option={
    Object {
      "dataset": Object {
        "dimensions": Array [
          "product",
          "2015",
          "2016",
          "2017",
        ],
        "source": Array [
          Array [
            "product",
            "2015",
            "2016",
            "2017",
          ],
          Array [
            "Matcha Latte",
            43.3,
            85.8,
            93.7,
          ],
          Array [
            "Milk Tea",
            83.1,
            73.4,
            55.1,
          ],
          Array [
            "Cheese Cocoa",
            86.4,
            65.2,
            82.5,
          ],
          Array [
            "Walnut Brownie",
            72.4,
            53.9,
            39.1,
          ],
        ],
      },
      "legend": Object {},
      "series": Array [
        Object {
          "name": "2015",
          "type": "bar",
        },
        Object {
          "name": "2016",
          "type": "bar",
        },
        Object {
          "name": "2017",
          "type": "bar",
        },
      ],
      "tooltip": Object {},
      "xAxis": Object {
        "type": "category",
      },
      "yAxis": Object {},
    }
  }
  opts={Object {}}
  showLoading={false}
  source={
    Array [
      Array [
        "product",
        "2015",
        "2016",
        "2017",
      ],
      Array [
        "Matcha Latte",
        43.3,
        85.8,
        93.7,
      ],
      Array [
        "Milk Tea",
        83.1,
        73.4,
        55.1,
      ],
      Array [
        "Cheese Cocoa",
        86.4,
        65.2,
        82.5,
      ],
      Array [
        "Walnut Brownie",
        72.4,
        53.9,
        39.1,
      ],
    ]
  }
  style={Object {}}
  theme={null}
/>
`;

exports[`Snapshot of Simple horizontal bar 1`] = `
<EchartsReact
  className=""
  echarts={Object {}}
  lazyUpdate={false}
  loadingOption={null}
  notMerge={false}
  onChartReady={[Function]}
  onEvents={Object {}}
  option={
    Object {
      "dataset": Object {
        "dimensions": Array [
          "product",
          "2015",
          "2016",
          "2017",
        ],
        "source": Array [
          Array [
            "product",
            "2015",
            "2016",
            "2017",
          ],
          Array [
            "Matcha Latte",
            43.3,
            85.8,
            93.7,
          ],
          Array [
            "Milk Tea",
            83.1,
            73.4,
            55.1,
          ],
          Array [
            "Cheese Cocoa",
            86.4,
            65.2,
            82.5,
          ],
          Array [
            "Walnut Brownie",
            72.4,
            53.9,
            39.1,
          ],
        ],
      },
      "legend": Object {},
      "series": Array [
        Object {
          "name": "2015",
          "type": "bar",
        },
        Object {
          "name": "2016",
          "type": "bar",
        },
        Object {
          "name": "2017",
          "type": "bar",
        },
      ],
      "tooltip": Object {
        "axisPointer": Object {
          "type": "shadow",
        },
        "trigger": "axis",
      },
      "xAxis": Object {
        "type": "value",
      },
      "yAxis": Object {
        "type": "category",
      },
    }
  }
  opts={Object {}}
  showLoading={false}
  source={
    Array [
      Array [
        "product",
        "2015",
        "2016",
        "2017",
      ],
      Array [
        "Matcha Latte",
        43.3,
        85.8,
        93.7,
      ],
      Array [
        "Milk Tea",
        83.1,
        73.4,
        55.1,
      ],
      Array [
        "Cheese Cocoa",
        86.4,
        65.2,
        82.5,
      ],
      Array [
        "Walnut Brownie",
        72.4,
        53.9,
        39.1,
      ],
    ]
  }
  style={Object {}}
  theme={null}
/>
`;

exports[`Snapshot of Simple ordered bar 1`] = `
<EchartsReact
  className=""
  echarts={Object {}}
  lazyUpdate={false}
  loadingOption={null}
  notMerge={false}
  onChartReady={[Function]}
  onEvents={Object {}}
  option={
    Object {
      "dataset": Object {
        "dimensions": Array [
          "framework",
          "star",
        ],
        "source": Array [
          Object {
            "framework": "Backbone",
            "star": 50,
          },
          Object {
            "framework": "React",
            "star": 1000,
          },
          Object {
            "framework": "Angularjs",
            "star": 1020,
          },
        ],
      },
      "legend": Object {},
      "series": Object {
        "name": "star",
        "type": "bar",
      },
      "tooltip": Object {
        "axisPointer": Object {
          "type": "shadow",
        },
        "trigger": "axis",
      },
      "xAxis": Object {
        "type": "value",
      },
      "yAxis": Object {
        "type": "category",
      },
    }
  }
  opts={Object {}}
  showLoading={false}
  source={
    Array [
      Array [
        "framework",
        "star",
      ],
      Array [
        "React",
        1000,
      ],
      Array [
        "Angularjs",
        1020,
      ],
      Array [
        "Backbone",
        50,
      ],
    ]
  }
  style={Object {}}
  theme={null}
/>
`;
